  * It is now possible to link any SimpleEntity to a Ticket.
  * The Ticket Workflow is now fully customizable. Use
    stalker.conf.defaults.TICKET_WORKFLOW dictionary to define the workflow and
    stalker.conf.defaults.TICKET_STATUS_ORDER for the order of the ticket
    statuses.

* Added a new class called ``Scene`` to manage Shots with another property.

0.2.0.a6
--------

* Added a new Dojo Widget called Tag to help the creation of the tags in the
  TagSelect.

* Users now can have more than one Department.

* Updated java scripts to be `required` in Dojo AMD way.

* Updated setup.py to include "pyramid_jinja2"

* User instances now have two new properties for getting the user tickets
  (User.tickets) and the open tickets (User.open_tickets).

* New shortcut Task.project returns the Task.task_of.project value.

* Added 'PlaceHolder' property for 'FilterSelect Widgets'. And 'Label' property
  is used in construction of 'PlaceHolder' property.

* Set disabled prerequisite fields, until their prerequisite is selected.

* Added 'StartDate', 'EndDate' and 'Duration' field to add_project page.
  'StartDate', 'EndDate' properties are written on database.

* jQueryGannt:
  * Gannt view is now communicating with Stalker correctly. The only left issue
    is the end date value is not properly shown in the gannt view.
  * Updated the jQueryGannt css's to work with Stalker and Dojo.

*  Project page is redesigned. SplitContainer is removed. All contents are
   displayed in TabContainer. New Contents in TabContainer are:
    * ProjectName (Disabled Field - Used for displaying projectname.)
    * Overview  (It has InlineEditable fields. Although they are not connected
      to DB.)

* Shot and Asset creation dialogs now automatically updated with the given
  Project instance info.

* User overview page is now reflection the new design.

0.2.0.a5
--------

* The ``code`` attribute of the SimpleEntity is now introduced as a separate